feat: added secret using sop

--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -23,12 +23,9 @@ spec:
           image: sissbruecker/linkding:1.31.0
           ports:
             - containerPort: 9090
-
-          # envFrom:
-          #   # - configMapRef:
-          #   #     name: linkding-configmap
-          #   - secretRef:
-          #       name: linkding-container-env
+          envFrom:
+            - secretRef:
+                name: user-secret
 
           securityContext:
             allowPrivilegeEscalation: false
