fix: user secrets

--- a/apps/staging/linkding/user-secret.yaml
+++ b/apps/staging/linkding/user-secret.yaml
@@ -1,22 +1,23 @@
 apiVersion: v1
 data:
-    password: ENC[AES256_GCM,data:AJr+zA6ZIy6xoI6hWX3SA54MJKY=,iv:2hyEg+lblJm3/625LTMwTLLMaykXi88r5oi5+cyl/p0=,tag:nkBBk4dAjk9lT5mE7c2xCA==,type:str]
-    user: ENC[AES256_GCM,data:jqXbsK6hIFo=,iv:+5tzkB1fUL9nQtGGGeDPk4mTaI1VGXfdNSJHNYq92Ak=,tag:Rhz6glOYwupfp9nkCAcpOw==,type:str]
+    password: ENC[AES256_GCM,data:uRs3yYVpUYE6RqnN9TfkFswmwkH2eIG2,iv:hS5Yx12OJ0rKkLLlMRNtFl1AxtDnQz7eHvMGWeqGsNY=,tag:DV3qjG6c9iKTdtXHKVqPgg==,type:str]
+    user: ENC[AES256_GCM,data:dqHOIxP7Hdg=,iv:z3s6+yqSJ0gYCnzUL5noNFoDSEoNijgO18nZSmUEuZ0=,tag:JJy7JrXxZpwDXO+VANhUAw==,type:str]
 kind: Secret
 metadata:
     name: user-secret
+    namespace: linkding
 sops:
     age:
         - recipient: age18s5gy33a29p073jnzw92crk25fa0pfqh8ayhm3d8nmrv2pz97yyq5mgaem
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQV1g1S1NjOXcrWEpJTExR
-            SFRlVW5iVHZOMUhFVW4vWmxLQXM4Z0FKUlNvCkNYUUdKei8rZzFQOEtCRUtySENx
-            NHRReFhiOTRGTVIxQ0JEN2FzaWpFK0kKLS0tIGtNSHErZmpoUDI2N21icGZ1MUd2
-            VUo1N3BiWXV4R0gvcWtWZ2F0VGI5dEEKcRfXmLBk+ZbaE/TIjpth3Dkjmo7vqeM8
-            0w2Yc4dH3k4tR/bCM9LChu5c4Oe+Xo29KbQB1HoGxcAgNl+h+C0kRg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCRFM2dGRBVmg3ZnV0UkNj
+            TmtKeXlMMTJ4Snp0RTdMR2FNOWtJdTFDMnlBCmh6djRMK2lIRW0xeUxrY1JOS21s
+            OXB4WFlRRG94aXhUQmtoNlRubHNYQ3MKLS0tIDVrczlUZGNsdkN2bzFLMElvVDRl
+            MVZ6bFU3ZkRSS21JTjZmaU5EZnNORU0KrnxkvLwzvOKjbVR1PLZqFoKZ0L5aSFZ3
+            odWFIpjhRY6yGQIl/Xvl36a89qzoz+69ecZuxgBg1iZC94xXwK5kvA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-02T17:30:18Z"
-    mac: ENC[AES256_GCM,data:qr1uSsbX+/KFRzmj54icJa7erlY/LnaX4J/aQtueIMEk8p5vd8jD5wIxe/R20yrOAvnbAF3fuHFnhhV81uOd46GjeByVOGlsFcgTxZ7uKzdLlg46yKgDHnXVCLYgMmtXn9m/slS4YLAX/3PiGLra+CvfbBGsxnn0F6taujgJuZ8=,iv:iZDQ1Ze1ReRIoIaYbZfNS3yED6gXGDzQLY+mXRxGp/4=,tag:+VC1vWqzkUTp1tNkhOypQQ==,type:str]
+    lastmodified: "2025-11-02T17:50:11Z"
+    mac: ENC[AES256_GCM,data:yItC/AIY0ZSoZ+rk16zCJjXDV7xx43rVbklJ0DrS/JqosBB9kz40U8qWsyJbbMqBQsLkRUMhXnPQXC3fXf0tDGYoiKchYEw+L4iXOlWnZnXrYRnv4INur8XvLULM7Ix60dnnz87dK6nNfNqxUDdkj66QwDs/69MSy8Nor4oIS5A=,iv:OAU8dr5Im8jN5GMOt7VAKGEgXzFLdmBmtShiSP2f3UU=,tag:Gte9Q/IkDgERAVGH94GwNw==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.11.0
