fix: user secrets

--- a/apps/staging/linkding/user-secret.yaml
+++ b/apps/staging/linkding/user-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
-    password: ENC[AES256_GCM,data:uRs3yYVpUYE6RqnN9TfkFswmwkH2eIG2,iv:hS5Yx12OJ0rKkLLlMRNtFl1AxtDnQz7eHvMGWeqGsNY=,tag:DV3qjG6c9iKTdtXHKVqPgg==,type:str]
-    user: ENC[AES256_GCM,data:dqHOIxP7Hdg=,iv:z3s6+yqSJ0gYCnzUL5noNFoDSEoNijgO18nZSmUEuZ0=,tag:JJy7JrXxZpwDXO+VANhUAw==,type:str]
+    LD_SUPERUSER_NAME: ENC[AES256_GCM,data:K1YQuyu67uw=,iv:uArjwosInGMWzxazmkgafwbn7rD4JnijZY1E422ftks=,tag:JZpdWf2vhiwMDcrobtrcFw==,type:str]
+    LD_SUPERUSER_PASSWORD: ENC[AES256_GCM,data:BUtHStvs0kNitDL8S4gBHSdEb9Q4RjnZ,iv:J4ma90pt1Ul5xksqT40WOhJkpiiTkaUA0DMQZJIoMss=,tag:JmFYM/9hL7z1gNdI4o98TA==,type:str]
 kind: Secret
 metadata:
     name: user-secret
@@ -11,13 +11,13 @@ sops:
         - recipient: age18s5gy33a29p073jnzw92crk25fa0pfqh8ayhm3d8nmrv2pz97yyq5mgaem
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCRFM2dGRBVmg3ZnV0UkNj
-            TmtKeXlMMTJ4Snp0RTdMR2FNOWtJdTFDMnlBCmh6djRMK2lIRW0xeUxrY1JOS21s
-            OXB4WFlRRG94aXhUQmtoNlRubHNYQ3MKLS0tIDVrczlUZGNsdkN2bzFLMElvVDRl
-            MVZ6bFU3ZkRSS21JTjZmaU5EZnNORU0KrnxkvLwzvOKjbVR1PLZqFoKZ0L5aSFZ3
-            odWFIpjhRY6yGQIl/Xvl36a89qzoz+69ecZuxgBg1iZC94xXwK5kvA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCZk5kbTkwaTJlQ0dUVnNM
+            bG5pQ203V0RJa2ZBSkFVU29KMFNneU1idUI4CnhiZmh3ejVSVElvMGkvN25WeUtH
+            UHg2bGpKQUhBNUFHZU52OUd2YStvbU0KLS0tIFQ1Y3hFTDhVUERRZGwvOHBXZ2pG
+            ZHhUdUY2TC9oKzMxK240RzhRanRENXcKuHoCBm9ABmSL8/3CNx5NIA4d2BywhN4z
+            moiMI9YNmWlPfnCZM9VO4GSf6Pm8DBKsKoDMpbBAAFZjD+jd2QTlVA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-02T17:50:11Z"
-    mac: ENC[AES256_GCM,data:yItC/AIY0ZSoZ+rk16zCJjXDV7xx43rVbklJ0DrS/JqosBB9kz40U8qWsyJbbMqBQsLkRUMhXnPQXC3fXf0tDGYoiKchYEw+L4iXOlWnZnXrYRnv4INur8XvLULM7Ix60dnnz87dK6nNfNqxUDdkj66QwDs/69MSy8Nor4oIS5A=,iv:OAU8dr5Im8jN5GMOt7VAKGEgXzFLdmBmtShiSP2f3UU=,tag:Gte9Q/IkDgERAVGH94GwNw==,type:str]
+    lastmodified: "2025-11-02T18:29:11Z"
+    mac: ENC[AES256_GCM,data:TTuofC9+PpRkbwM2WHJ8bcT5emcDFVsULi+xuDdNK6OIVPhK+Gv4U4sMIfpfYet4hyMfhkuwPkSPKN6UQBHssqL5vtRh3FU6I/E2WPCNGGNHWQew1dffE9RXJcN5Uz0wwnqb0mlJMSiMP23MERXQC7HuRgzhp7Y+6EkETC4HaMg=,iv:e6kpppOjVrS1824LHKHwlJq1IJCJ8qGmbKeuZO9Ymms=,tag:S4WXgHCJdz3iMh6IiC9jGg==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.11.0
