fix: cloudflare tunnel secret

--- a/apps/production/linkding/cloudflare-tunnel-secret.yaml
+++ b/apps/production/linkding/cloudflare-tunnel-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: tunnel-token
+    namespace: cloudflare
 stringData:
     token: ENC[AES256_GCM,data:bxFFRqja32yEgOT/Q/UCEEflLqWuCorRS6+Z+0wzEmYlXbOh1F7JtYZltZo8G2DmnE45BmheTTedS/BLMhuRdWlalW0P+z8ur5aE/MbmEDfFs25y8jnzqiQhkzxtOcjuYTmWAySLUa0fYoOYzw5UDbqpgm2GEHIXREnIBcFHeq7cVCdNbjkgkXCiw+Fe1TuQ2X+HfdaTl8GpL221Kdgz5wUSt1m/z+DyfDzf+F9Mcth5hrNHqWodUw==,iv:WYiS5O3QgqAZtcIf4r1MzLfLjJBK47LD3prn0fkK8VU=,tag:d+m/Hv8e6mFcUoOS6mgupg==,type:str]
 sops:
