--- a/apps/base/excalidraw/service.yaml
+++ b/apps/base/excalidraw/service.yaml
@@ -4,8 +4,10 @@ metadata:
   name: excalidraw
   namespace: excalidraw
 spec:
-  ports:
-    - port: 5000
   selector:
     app: excalidraw
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
   type: ClusterIP
