--- a/apps/staging/obsidian-livesync/kustomization.yaml
+++ b/apps/staging/obsidian-livesync/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - linkding
-  - excalidraw
-  - obsidian-livesync
+  - ../../base/obsidian-livesync
+  - couchdb-secret.yaml
