fix: couchdb user permission

--- a/apps/base/obsidian-livesync/couchdb-statefulset.yaml
+++ b/apps/base/obsidian-livesync/couchdb-statefulset.yaml
@@ -14,6 +14,10 @@ spec:
       labels:
         app: couchdb
     spec:
+      securityContext:
+        runAsUser: 5984   # CouchDB user ID
+        runAsGroup: 5984  # CouchDB group ID
+        fsGroup: 5984
       containers:
         - name: couchdb
           image: couchdb:3.3.3
